stderr
FizzBuzzTest.java:40: error: reached end of file while parsing
}
 ^
1 error
